# trading-strategy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/: README.md
.codex/: config.toml
configs/: btcusdt_spot_15m.research_matrix.json  btcusdt_spot_15m.rsi_confidence_extension.json  btcusdt_spot_15m.rsi_confirmation_head_to_head.json  btcusdt_spot_15m.rsi_confirmation_refine.json  btcusdt_spot_15m.rsi_window_validation.json  btcusdt_spot_1h.baselines.json  btcusdt_spot_1h.ema.json  btcusdt_spot_1h.ema_best_candidate.json  btcusdt_spot_1h.ema_filtered.json  btcusdt_spot_1h.ema_next.json  btcusdt_spot_1h.ema_popular.json  btcusdt_spot_1h.ema_regime_rsi_entry.json  btcusdt_spot_1h.ema_spread_filter.json  btcusdt_spot_1h.ema_spread_filter_focus.json  btcusdt_spot_1h.ema_spread_filter_micro.json  btcusdt_spot_1h.ema_variations.json  btcusdt_spot_1h.family_matrix.json  btcusdt_spot_1h.high_winrate_search.json  btcusdt_spot_1h.ma_vs_ema.json  btcusdt_spot_1h.pattern_double_top_bottom.json  btcusdt_spot_1h.research_matrix.json  btcusdt_spot_1h.rsi_atr_execution.json  btcusdt_spot_1h.rsi_confirmation.json  btcusdt_spot_1h.rsi_cooldown_refine.json  btcusdt_spot_1h.rsi_ema_atr_price.json  btcusdt_spot_1h.rsi_ema_atr_vol.json  btcusdt_spot_1h.rsi_ema_filter.json  btcusdt_spot_1h.rsi_focus_refine.json  btcusdt_spot_1h.rsi_micro_refine.json  btcusdt_spot_1h.rsi_refine.json  btcusdt_spot_1h.rsi_refine_next.json  btcusdt_spot_1h.rsi_sweep.json  btcusdt_spot_1h.rsi_window_validation.json  btcusdt_spot_30m.research_matrix.json  btcusdt_spot_4h.aligned_to_1h_breakout_atr.json  (+51 more)
(+121 files in other folders)
