[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-strategy"
version = "0.1.0"
description = "Minimal experiment lab for comparing auto-trading strategies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trading-strategy = "trading_strategy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
